--- a/charts/hobbyfarm/values.yaml
+++ b/charts/hobbyfarm/values.yaml
@@ -89,3 +89,15 @@ ranchervm:
     frontend: rancher/vm-frontend:v0.2.0
     novnc: rancher/vm-novnc:v0.2.0
     tools: rancher/vm-tools:v0.2.0
+
+loki:
+  enabled: true
+  image: grafana/loki
+grafana:
+  enabled: true
+  image: grafana/grafana
+  user: admin
+  password: adm1n
+  provisioning:
+    configuration:
+      disable_login_form: false
