Add webhook secret to all services

--- a/charts/hobbyfarm/templates/authr-service/deployment.yaml
+++ b/charts/hobbyfarm/templates/authr-service/deployment.yaml
@@ -45,8 +45,16 @@ spec:
             mountPath: "/etc/ssl/certs/tls.crt"
             subPath: tls.crt
             readOnly: true
+          - name: webhook-secret
+            mountPath: "/webhook-secret/ca.crt"
+            subPath: ca.crt
+            readOnly: true
       volumes:
       - name: authr-secret
         secret:
           secretName: hobbyfarm-grpc-secret
+          optional: false
+      - name: webhook-secret
+        secret:
+          secretName: hobbyfarm-webhook-secret
           optional: false
