changed helm files for custom css in admin ui

--- a/charts/hobbyfarm/templates/admin-ui/configmap.yaml
+++ b/charts/hobbyfarm/templates/admin-ui/configmap.yaml
@@ -14,3 +14,7 @@ data:
         },
         "logo": {{ $.Values.admin.config.logo | quote }}
     }
+
+  {{- if $.Values.admin.custom }}
+  custom.css: {{ $.Values.admin.custom | quote }}
+  {{- end }}
