--- a/charts/hobbyfarm/values.yaml
+++ b/charts/hobbyfarm/values.yaml
@@ -57,6 +57,16 @@ conversion:
   containerPort: 444
   servicePort: 443  # needs to remain 443, see https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definition-versioning/#deploy-the-conversion-webhook-servicev2
   serviceAccountName: "hobbyfarm-conversion"
+cost:
+  image: hobbyfarm/cost-service:master
+  replicas: 1
+  logLevel: "0"
+  apiPort: 80
+  serviceAccountName: "hobbyfarm-cost"
+  trackableResources: # add all non default kubernetes resources for cost tracking
+    - group: "hobbyfarm.io"
+      version: "v1"
+      resource: "virtualmachines"
 course:
   image: hobbyfarm/course-service:v3.2.5
   replicas: 1
