Add service for quizzes

--- a/charts/hobbyfarm/templates/gargantua/ingress.yaml
+++ b/charts/hobbyfarm/templates/gargantua/ingress.yaml
@@ -124,6 +124,21 @@ spec:
               name: rbac-service
               port: 
                 number: {{ $.Values.rbac.apiPort }}
+        # quiz-service
+        - pathType: Prefix
+          path: "/a/quiz"
+          backend:
+            service:
+              name: quiz-service
+              port: 
+                number: {{ $.Values.quiz.apiPort }}
+        - pathType: Prefix
+          path: "/quiz"
+          backend:
+            service:
+              name: quiz-service
+              port: 
+                number: {{ $.Values.quiz.apiPort }}
         # progress-service
         - pathType: Prefix
           path: "/a/progress"
