--- a/charts/hobbyfarm/values.yaml
+++ b/charts/hobbyfarm/values.yaml
@@ -1,5 +1,5 @@
 admin:  # defaults for admin service
-  image: hobbyfarm/admin-ui:v3.2.5
+  image: hobbyfarm/admin-ui:v3.3.0
   # configMapName: admin-config
   config:
     title: HobbyFarm Administration
@@ -17,7 +17,7 @@ admin:  # defaults for admin service
     # }
 
 ui:  # defaults for UI service
-  image: hobbyfarm/ui:v3.2.5
+  image: hobbyfarm/ui:v3.3.0
   configMapName: ui-config
   config:
     title: HobbyFarm Learn
@@ -37,55 +37,55 @@ ui:  # defaults for UI service
       # /* Some custom css */
     # }
 accesscode:
-  image: hobbyfarm/accesscode-service:v3.2.5
+  image: hobbyfarm/accesscode-service:v3.3.0
   replicas: 1
   logLevel: "0"
   serviceAccountName: "hobbyfarm-accesscode"
 authn:
-  image: hobbyfarm/authn-service:v3.2.5
+  image: hobbyfarm/authn-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-authn"
 authr:
-  image: hobbyfarm/authr-service:v3.2.5
+  image: hobbyfarm/authr-service:v3.3.0
   replicas: 1
   logLevel: "0"
   serviceAccountName: "hobbyfarm-authr"
 conversion:
-  image: hobbyfarm/conversion-service:v3.2.5
+  image: hobbyfarm/conversion-service:v3.3.0
   containerPort: 444
   servicePort: 443  # needs to remain 443, see https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definition-versioning/#deploy-the-conversion-webhook-servicev2
   serviceAccountName: "hobbyfarm-conversion"
 cost:
-  image: hobbyfarm/cost-service:master
+  image: hobbyfarm/cost-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-cost"
-  trackableResources: # add all non default kubernetes resources for cost tracking
+  trackableResources:  # add all non default kubernetes resources for cost tracking
     - group: "hobbyfarm.io"
       version: "v1"
       resource: "virtualmachines"
 course:
-  image: hobbyfarm/course-service:v3.2.5
+  image: hobbyfarm/course-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-course"
 dbconfig:
-  image: hobbyfarm/dbconfig-service:v3.2.5
+  image: hobbyfarm/dbconfig-service:v3.3.0
   replicas: 1
   logLevel: "0"
   serviceAccountName: "hobbyfarm-dbconfig"
 environment:
-  image: hobbyfarm/environment-service:v3.2.5
+  image: hobbyfarm/environment-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-environment"
 progress:
-  image: hobbyfarm/progress-service:v3.2.5
+  image: hobbyfarm/progress-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
@@ -97,34 +97,34 @@ quiz:
   apiPort: 80
   serviceAccountName: "hobbyfarm-quiz"
 rbac:
-  image: hobbyfarm/rbac-service:v3.2.5
+  image: hobbyfarm/rbac-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-rbac"
   installRBACRoles: false
 scenario:
-  image: hobbyfarm/scenario-service:v3.2.5
+  image: hobbyfarm/scenario-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-scenario"
 scheduledevent:
-  image: hobbyfarm/scheduledevent-service:v3.2.5
+  image: hobbyfarm/scheduledevent-service:v3.3.0
   replicas: 1
   controllerWorkerThreadCount: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-scheduledevent"
 session:
-  image: hobbyfarm/session-service:v3.2.5
+  image: hobbyfarm/session-service:v3.3.0
   replicas: 1
   controllerWorkerThreadCount: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-session"
 setting:
-  image: hobbyfarm/setting-service:v3.2.5
+  image: hobbyfarm/setting-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
@@ -141,13 +141,13 @@ terraform:
     tag: "v0.0.13-alpha1"
     threads: 2
   service:
-    image: hobbyfarm/terraform-service:v3.2.5
+    image: hobbyfarm/terraform-service:v3.3.0
     replicas: 1
     controllerWorkerThreadCount: 1
     logLevel: "0"
     serviceAccountName: "hobbyfarm-terraform"
 user:
-  image: hobbyfarm/user-service:v3.2.5
+  image: hobbyfarm/user-service:v3.3.0
   replicas: 1
   controllerWorkerThreadCount: 1
   logLevel: "0"
@@ -159,34 +159,34 @@ scoreservice:
   apiPort: 80
   replicas: 0
 vm:
-  image: hobbyfarm/vm-service:v3.2.5
+  image: hobbyfarm/vm-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-vm"
 vmclaim:
-  image: hobbyfarm/vmclaim-service:v3.2.5
+  image: hobbyfarm/vmclaim-service:v3.3.0
   replicas: 1
   controllerWorkerThreadCount: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-vmclaim"
 vmset:
-  image: hobbyfarm/vmset-service:v3.2.5
+  image: hobbyfarm/vmset-service:v3.3.0
   replicas: 1
   controllerWorkerThreadCount: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-vmset"
 vmtemplate:
-  image: hobbyfarm/vmtemplate-service:v3.2.5
+  image: hobbyfarm/vmtemplate-service:v3.3.0
   replicas: 1
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-vmtemplate"
 
 gargantua:
-  image: hobbyfarm/gargantua:v3.2.5
+  image: hobbyfarm/gargantua:v3.3.0
   logLevel: "0"
   apiPort: 80
   serviceAccountName: "hobbyfarm-gargantua"
